# ipclog

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ipclog/: __init__.py  ipc_server.py  logger.py
tests/: test_logger.py
